added hints to concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -512,7 +512,10 @@
 
                         <p>
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Mon premier jour</span>
+                                <span class="hint" title="Le passé composé: fait ponctuel et achevé
+        C’est un seul jour précis, entièrement situé dans le passé, avec un début et une fin clairs
+        On le raconte comme un événement complet.
+                                ">Mon premier jour</span>
                                 de classe (<b title="s'est passé">se passer</b>)
                                 <input type="text" pattern="s'est passé">
                                 en 1996.
@@ -534,9 +537,17 @@
 
                             Il (<b title="faisait">faire</b>)
                             <input type="text" pattern="faisait">
-                            beau et je (<b title="n'avais pas">ne pas avoir</b>)
-                            <input type="text" pattern="n'avais pas">
-                            envie de quitter la maison pour aller rencontrer de nouveaux
+                            beau et
+                            <span class="sentence-with-hint">
+                                je (<b title="n'avais pas">ne pas avoir</b>)
+                                <input type="text" pattern="n'avais pas">
+                                <span class="hint" title="L’imparfait: un état mental/émotionnel qui dure dans le contexte de la scène, et non pas un événement ponctuel
+        On ne raconte pas le moment précis où l’envie a disparu, mais on décrit comment on se sentait à ce moment-là.
+                            ">
+                                    envie de quitter la maison
+                                </span>
+                            </span>
+                            pour aller rencontrer de nouveaux
                             amis, comme ma mère me (<b title="répétait">le répéter</b>)
                             <input type="text" pattern="le répétait">
                             sans cesse.
@@ -567,9 +578,16 @@
 
                             Pour elle, (<b title="c'était">ce être</b>)
                             <input type="text" pattern="c'était">
-                            une grande journée où son petit garçon (<b title="devenait">devenir</b>)
-                            <input type="text" pattern="devenait">
-                            un grand homme; pour moi, (<b title="c'était">ce être</b>)
+                            <span class="sentence-with-hint">
+                                <span class="hint" title="L’imparfait: le processus de changement vu comme en cours pendant cette journée.
+            l’accent sur l’évolution ressentie tout au long de la journée.
+                                ">
+                                    une grande journée où</span>
+                                son petit garçon (<b title="devenait">devenir</b>)
+                                <input type="text" pattern="devenait">
+                                un grand homme;
+                            </span>
+                            pour moi, (<b title="c'était">ce être</b>)
                             <input type="text" pattern="c'était">
                             un jour triste où
                             <span class="sentence-with-hint">
