added hints to concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -47,7 +47,8 @@
 
                         <p>
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">
+                                <span class="hint"
+                                    title="L’imparfait: Une action répétée et… vue de son déroulement: c’est une description.">
                                     Chaque</span> mercredi soir, les étudiants (<b title="avaient">avoir</b>)
                                 <input type="text" pattern="avaient">
                                 l’habitude de sortir à la Chasse-Galerie
@@ -71,14 +72,16 @@
                             toujours une grande fête.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Un</span>
+                                <span class="hint" title="Le passé composé: Événement ponctuel et daté.">Un</span>
                                 mercredi soir, Jeremy et ses camarades de classe
                                 (<b title="sont arrivés">arriver</b>)
                                 <input type="text" pattern="sont arrivés">
                                 très tard au bar
                             </span>
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">parce qu</span>’ils
+                                <span class="hint" title="Plus-que-parfait: action antérieure
+            l’étude s’est produite avant l’action principale (ils sont arrivés tard)
+                                ">parce qu</span>’ils
                                 (<b title="avaient dû">devoir</b>))
                                 <input type="text" pattern="avaient dû">
                                 étudier beaucoup pour l’examen du lendemain.
@@ -93,7 +96,10 @@
                             .
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">À leur arrivée</span>,
+                                <span class="hint" title="L’imparfait: c’est une description
+    une situation en arrière-plan au moment de l’arrivée
+    Ici, on ne parle pas d’un événement qui se déroule et s’achève, mais d’un état continu : les étudiants se trouvaient là.
+            ">À leur arrivée</span>,
                                 plus de deux cents étudiants (<b title="étaient">être</b>)
                                 <input type="text" pattern="étaient">
                                 présents.
@@ -115,14 +121,19 @@
                             quelque chose à boire.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Ensuite</span>,
+                                <span class="hint" title="Le passé composé: une action ponctuelle et terminée
+            L’installation est un événement précis, pas un état prolongé.
+                                ">Ensuite</span>,
                                 il (<b title="s'est installé">s’installer</b>)
                                 <input type="text" pattern="s'est installé">
                                 dans un coin avec des amis.
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Soudain</span>,
+                                <span class="hint" title="Le passé composé: événement ponctuel et précis
+        « Soudain » indique un changement rapide, un moment déclencheur
+        Dans une narration au passé, le passé composé sert à faire avancer l’histoire avec des événements datés et terminés.
+                                ">Soudain</span>,
                                 il (<b title="a vu">voir</b>)
                                 <input type="text" pattern="a vu">
                                 la jolie jeune fille
@@ -157,7 +168,10 @@
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Des mois plus tard</span>,
+                                <span class="hint" title="Le passé composé: l’événement ponctuel
+            « Des mois plus tard » fixe un point précis dans le temps.
+            Dans une narration, le passé composé sert à faire avancer l’action principale.
+                                ">Des mois plus tard</span>,
                                 on (<b title="a appris">apprendre</b>)
                                 <input type="text" pattern="a appris">
                                 que ce soir-là,
@@ -201,7 +215,9 @@
                             <span class="sentence-with-hint">
                                 un petit garçon, (<b title="était né">naître</b>)
                                 <input type="text" pattern="était né">
-                                <span class="hint" title="">il y a un mois</span>.
+                                <span class="hint" title="Plus-que-parfait: la naissance s’est produite avant l’action principale du récit (il m’a envoyé un courriel).
+                                    ">il
+                                    y a un mois</span>.
                             </span>
 
                             On peut dire qu’il s’en passe des belles choses à l’École internationale de
@@ -699,7 +715,10 @@
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Finalement</span>,
+                                <span class="hint" title="Le passé composé: fait précis, qui a eu lieu à un moment donné et qui est achevé
+            le jugement final qu’on porte sur une expérience passée, une conclusion à laquelle on est arrivé
+            « Finalement » marque une conclusion
+            ">Finalement</span>,
                                 (<b title="j'ai adoré">je adorer</b>)
                                 <input type="text" pattern="j'ai adoré">
                                 cette expérience.
