added hints to concordance3

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -274,8 +274,9 @@
                                 aussitôt et nous (<b title="sommes parties">partir</b>)
                                 <input type="text" class="wide" pattern="sommes parties">
                                 sans tarder,
-                                <span class="hint" title="Le passé composé + L’imparfait : Une action qui est en cours quand une autre 
-arrive.">car</span> l’heure de fermeture des magasins
+                                <span class="hint"
+                                    title="Le passé composé + L’imparfait : Une action qui est en cours quand une autre arrive.">car</span>
+                                l’heure de fermeture des magasins
                                 (<b title="approchait">approcher</b>)
                                 <input type="text" pattern="approchait">
                                 .
