--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -569,7 +569,12 @@
                             sans cesse.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Depuis des semaines</span>,
+                                <span class="hint" title="
+        préparait - action en cours ou habituelle dans le passé (le processus n’était pas terminé)
+        avait préparé - action terminée avant un autre moment passé
+        « depuis » + imparfait = action commencée avant et encore en cours à ce moment passé
+        « Depuis » + plus-que-parfait = moins fréquent, mais possible pour insister sur la période écoulée avant la fin d’une action
+                                ">Depuis des semaines</span>,
                                 elle (<b title="préparait|avait préparé">préparer</b>)
                                 <input type="text" pattern="préparait|avait préparé">
                             </span>
@@ -615,7 +620,9 @@
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Ce matin-là</span>,
+                                <span class="hint"
+                                    title="Le passé composé: une action ponctuelle, datée et terminée dans le passé.">Ce
+                                    matin-là</span>,
                                 ma mère (<b title="m'a conduit">me conduire</b>)
                                 <input type="text" pattern="m'a conduit">
                                 à l’autobus.
@@ -631,7 +638,10 @@
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Enfin</span>,
+                                <span class="hint" title="Le passé composé: des actions ponctuelles, datées et terminées, qui s’enchaînent dans la narration.
+                Enfin » indique un moment exact attendu par le narrateur
+                Le passé composé sert ici à faire avancer la trame principale
+                                ">Enfin</span>,
                                 l’autobus (<b title="est arrivé">arriver</b>)
                                 <input type="text" pattern="est arrivé">
                                 et je (<b title="suis monté">monter</b>)
@@ -659,13 +669,15 @@
                             .
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Quand</span> je
+                                <span class="hint"
+                                    title="Le passé composé + L’imparfait : Une action qui est en cours quand une autre arrive.">Quand</span>
+                                je
                                 (<b title="suis arrivé">arriver</b>)
                                 <input type="text" pattern="suis arrivé">
                                 dans la classe
+                                , ma professeure (<b title="m'attendait">me attendre</b>)
+                                <input type="text" pattern="m'attendait">
                             </span>
-                            , ma professeure (<b title="m'attendait">me attendre</b>)
-                            <input type="text" pattern="m'attendait">
                             .
 
                             <span class="sentence-with-hint">
@@ -701,14 +713,17 @@
                             .
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Dès ce moment</span>,
+                                <span class="hint"
+                                    title="Le passé composé: un événement ponctuel : le moment précis où cette prise de conscience a eu lieu.">Dès
+                                    ce moment</span>,
                                 (<b title="j'ai compris">je comprendre</b>)
                                 <input type="text" pattern="j'ai compris">
                                 que j’aimerais ma première classe.
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Les jours suivants</span>,
+                                <span class="hint" title="L’imparfait: Un état d’esprit qui se prolonge">Les jours
+                                    suivants</span>,
                                 (<b title="j'avais">je avoir</b>)
                                 <input type="text" pattern="j'avais">
                                 hâte de retrouver mes petits camarades et mon nouveau milieu.
