added hints for concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -233,7 +233,9 @@
 
                         <p>
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Chaque</span> été,
+                                <span class="hint"
+                                    title="L’imparfait: une habitude répétée dans le passé, et non un événement ponctuel.">Chaque</span>
+                                été,
                                 mon mari et moi, nous (<b title="avions">avoir</b>)
                                 <input type="text" pattern="avions">
                                 l’habitude de passer des vacances à la mer.
@@ -266,7 +268,9 @@
                             y réserver une chambre pour la semaine.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">L’année dernière</span>,
+                                <span class="hint" title="Le passé composé: un événement ponctuel, daté et terminé.">
+                                    L’année dernière
+                                </span>,
                                 nous (<b title="avons recommencé">recommencer</b>)
                                 <input type="text" class="wide" pattern="avons recommencé">
                                 cette expérience.
@@ -290,7 +294,9 @@
                             nos valises.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Comme</span> nous
+                                <span class="hint"
+                                    title="L’imparfait: un état d’esprit ou une motivation qui dure dans le passé.">Comme</span>
+                                nous
                                 (<b title="voulions">vouloir</b>)
                                 <input type="text" pattern="voulions">
                                 faire un beau voyage,
@@ -319,7 +325,8 @@
                             très hâte d’arriver.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">À notre arrivée</span>,
+                                <span class="hint" title="Le passé composé: une action ponctuelle et terminée.">À notre
+                                    arrivée</span>,
                                 les hommes nous (<b title="ont accueillis">accueillir</b>)
                                 <input type="text" class="wide" pattern="ont accueillis">
                                 chaleureusement
@@ -329,7 +336,8 @@
                                 nous (<b title="avons parlé">parler</b>)
                                 <input type="text" pattern="avons parlé">
                                 avec eux
-                                <span class="hint" title="">pendant un moment</span>.
+                                <span class="hint" title="Le passé composé: une action ponctuelle et terminée.">pendant
+                                    un moment</span>.
                             </span>
 
                             <span class="sentence-with-hint">
@@ -352,7 +360,10 @@
                             nouveaux.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">
+                                <span class="hint" title="si le passé composé: Chaque déplacement est vu comme un événement concret qui s’ajoute à la chronologie:
+                                (jour 1 → on y va, jour 2 → on y va, etc.).
+si l’imparfait: habitude ou action répétée dans le passé.
+                                ">
                                     Le lendemain, et les autres jours après</span>,
                                 nous (<b title="sommes allés|allions">aller</b>)
                                 <input type="text" class="wide" pattern="sommes allés|allions">
@@ -369,9 +380,8 @@
                             <span class="sentence-with-hint">
                                 Nous (<b title="nous sommes reposés">se reposer</b>)
                                 <input type="text" class="extra-wide" pattern="nous sommes reposés">
-                                <span class="hint"
-                                    title="Le passé composé: c’est une action principale, ponctuelle, accomplie,
-                                il n’y a pas de verbe conjugué au passé qui suit, donc pas besoin du plus-que-parfait">toute la
+                                <span class="hint" title="Le passé composé: c’est une action principale, ponctuelle, accomplie,
+            il n’y a pas de verbe conjugué au passé qui suit, donc pas besoin du plus-que-parfait">toute la
                                     semaine</span>
                                 avant de revenir à la maison.
                             </span>
