added hints to concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -396,14 +396,16 @@ si l’imparfait: habitude ou action répétée dans le passé.
 
                         <p>
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Quand</span>
+                                <span class="hint" title="L’imparfait: un état continu dans le passé">Quand</span>
                                 (<b title="j'étais">je être</b>)
                                 <input type="text" pattern="j'étais">
                                 petite
                             </span>,
                             <span class="sentence-with-hint">
                                 le pique-nique
-                                <span class="hint" title="">annuel</span> du quartier
+                                <span class="hint"
+                                    title="L’imparfait: un fait habituel ou d’une caractéristique répétée à chaque année.">annuel</span>
+                                du quartier
                                 (<b title="était">être</b>)
                                 <input type="text" pattern="était">
                                 une fête que (<b title="j'attendais">je attendre</b>)
@@ -418,7 +420,9 @@ si l’imparfait: habitude ou action répétée dans le passé.
                             follement.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">La veille de l’événement</span>,
+                                <span class="hint" title="Si l’imparfait: on décrit la scène comme en direct
+Si plus-que-parfait: on raconte que tout était déjà fait avant un autre événement dans le récit
+                                ">La veille de l’événement</span>,
                                 ma mère (<b title="préparait|avait préparé">préparer</b>)
                                 <input type="text" pattern="préparait|avait préparé">
                                 le repas et un dessert qu’elle (<b title="mettait|avait mis">mettre</b>)
@@ -463,7 +467,9 @@ si l’imparfait: habitude ou action répétée dans le passé.
                             acheter de la crème glacée.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">La dernière année</span>,
+                                <span class="hint"
+                                    title="Le passé composé: un fait ponctuel, unique et terminé, situé dans un moment précis du passé.">La
+                                    dernière année</span>,
                                 où nous (<b title="avons participé">participer</b>)
                                 <input type="text" class="wide" pattern="avons participé">
                                 à cette activité,
@@ -481,7 +487,9 @@ si l’imparfait: habitude ou action répétée dans le passé.
                             .
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Après quelques heures</span>,
+                                <span class="hint"
+                                    title="Le passé composé: une action ponctuelle et terminée, survenue à un moment précis dans le passé.">Après
+                                    quelques heures</span>,
                                 nous (<b title="sommes rentrés">rentrer</b>)
                                 <input type="text" class="wide" pattern="sommes rentrés">
                                 à la maison très déçus.
@@ -515,7 +523,8 @@ si l’imparfait: habitude ou action répétée dans le passé.
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">
+                                <span class="hint"
+                                    title="Le passé composé: une action ponctuelle, datée et terminée dans le passé.">
                                     Peu de temps après</span>, nous (<b title="avons déménagé">déménager</b>)
                                 <input type="text" class="wide" pattern="avons déménagé">
                                 dans un autre coin de la ville
@@ -717,7 +726,8 @@ si l’imparfait: habitude ou action répétée dans le passé.
 
                             <span class="sentence-with-hint">
                                 qu’elle (<b title="avait déjà écrites">écrire
-                                    <span class="hint" title="">déjà</span></b>)
+                                    <span class="hint"
+                                        title="Plus-que-parfait: ces lettres existaient avant que je commence à les voir.">déjà</span></b>)
                                 <input type="text" class="wide" pattern="avait déjà écrites">
                             </span>
                             .
