fine-tuned concordance conditional

--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -60,17 +60,19 @@
                                 pattern="Mais, l'hiver prochain, si elle n'a pas de rhume, elle fera du ski[.]?">
                         </li>
                         <li>
-                            <span title="Demain, si je ne suis pas à la diète, je mangerai du dessert.">Aujourd’hui, je
+                            <span
+                                title="Mais, demain, si je ne suis pas à la diète, je mangerai du dessert.">Aujourd’hui,
+                                je
                                 mange du dessert parce que je ne suis pas à la diète.</span>
                             <input type="text"
-                                pattern="Demain, si je ne suis pas à la diète, je mangerai du dessert[.]?">
+                                pattern="Mais, demain, si je ne suis pas à la diète, je mangerai du dessert[.]?">
                         </li>
                         <li>
                             <span
-                                title="Mais, demain soir, nous ferons la fête, si nous ne devons pas nous lever tôt.">Ce
+                                title="Mais, demain soir, si nous ne devons pas nous lever tôt, nous ferons la fête.">Ce
                                 soir, nous ne faisons pas la fête parce que nous devons nous lever tôt.</span>
                             <input type="text"
-                                pattern="Mais, demain soir, nous ferons la fête, si nous ne devons pas nous lever tôt[.]?">
+                                pattern="Mais, demain soir, si nous ne devons pas nous lever tôt, nous ferons la fête[.]?">
                         </li>
                         <li>
                             <span title="Mais, demain, s’il n’y a pas de tempête de neige, je sortirai."> Aujourd’hui,
@@ -175,11 +177,11 @@
                                 pattern="Si la chaussée n'était pas glacée, nous ferions une promenade[.]?">
                         </li>
                         <li>
-                            <span title="Si les voisins faisaient moins de bruit, je pourrais dormir.">Je ne peux pas
+                            <span title="Si les voisins ne faisaient pas de bruit, je pourrais dormir.">Je ne peux pas
                                 dormir
                                 parce que les voisins font trop de bruit.</span>
                             <input type="text"
-                                pattern="Si les voisins faisaient moins de bruit, je pourrais dormir[.]?">
+                                pattern="Si les voisins ne faisaient pas de bruit, je pourrais dormir[.]?">
                         </li>
                         <li>
                             <span title="S’il avait un travail, il aurait de l’argent.">Il n’a pas d’argent parce qu’il
@@ -188,10 +190,10 @@
                             <input type="text" pattern="S'il avait un travail, il aurait de l'argent[.]?">
                         </li>
                         <li>
-                            <span title="Si nous avions une auto, nous sortirions plus souvent.">Vous ne sortez pas
+                            <span title="Si vous aviez l'auto, vous sortiriez souvent.">Vous ne sortez pas
                                 souvent
                                 parce que vous n’avez pas d’auto.</span>
-                            <input type="text" pattern="Si nous avions une auto, nous sortirions plus souvent[.]?">
+                            <input type="text" pattern="Si vous aviez l'auto, vous sortiriez souvent[.]?">
                         </li>
                     </ol>
                 </section>
@@ -275,11 +277,11 @@
                     <ol class="input-sentence-width">
                         <li>
                             <span
-                                title="Si nous avions mangé moins de chocolat, nous n’aurions pas eu mal à l’estomac.">Nous
+                                title="Si nous n’avions pas mangé trop de chocolat, nous n’aurions pas eu mal à l’estomac.">Nous
                                 avons eu mal à l’estomac
                                 parce que nous avons mangé trop de chocolat.</span>
                             <input type="text"
-                                pattern="Si nous avions mangé moins de chocolat, nous n'aurions pas eu mal à l’estomac[.]?">
+                                pattern="Si nous n’avions pas mangé trop de chocolat, nous n’aurions pas eu mal à l’estomac[.]?">
                         </li>
                         <li>
                             <span title="S’il n’avait pas plu, elle serait allée en randonnée."> Elle n’est pas
@@ -287,17 +289,18 @@
                             <input type="text" pattern="S'il n'avait pas plu, elle serait allée en randonnée[.]?">
                         </li>
                         <li>
-                            <span title="Si j’avais eu moins de travail, je t’aurais téléphoné.">Je ne t’ai pas
+                            <span title="Si je n'avais pas eu trop de travail, je t'aurais téléphoné.">Je ne t’ai pas
                                 téléphoné parce que j’ai eu trop de travail.</span>
-                            <input type="text" pattern="Si j'avais eu moins de travail, je t'aurais téléphoné[.]?">
+                            <input type="text"
+                                pattern="Si je n'avais pas eu trop de travail, je t'aurais téléphoné[.]?">
                         </li>
                         <li>
                             <span
-                                title="Si la nourriture avait été moins épicée, tu n'aurais pas détesté ce restaurant.">Tu
+                                title="Si la nourriture n’avait pas été très épicée, tu n’aurais pas détesté ce restaurant.">Tu
                                 as détesté ce restaurant parce
                                 que la nourriture était très épicée.</span>
                             <input type="text"
-                                pattern="Si la nourriture avait été moins épicée, tu n'aurais pas détesté ce restaurant[.]?">
+                                pattern="Si la nourriture n’avait pas été très épicée, tu n’aurais pas détesté ce restaurant[.]?">
                         </li>
                         <li>
                             <span title="S’il n’avait pas été méchant avec nous, nous l’aurions invité."> Nous ne
@@ -316,7 +319,7 @@
                         <li>
                             Si le député avait respecté les électeurs, il (<b
                                 title="aurait démissionné">démissionner</b>)
-                            <input type="text" pattern="aurait démissionné">.
+                            <input class="wide" type="text" pattern="aurait démissionné">.
                         </li>
                         <li>
                             Si tu avais eu dix-huit ans, tu (<b title="aurais pu">pouvoir</b>)
@@ -335,7 +338,7 @@
                         </li>
                         <li>
                             Si vous aviez préparé un repas, (<b title="j'aurais mangé">je manger</b>)
-                            <input type="text" pattern="j'aurais mangé">
+                            <input class="wide" type="text" pattern="j'aurais mangé">
                             un peu.
                         </li>
                         <li>
@@ -360,12 +363,12 @@
                         </li>
                         <li>
                             Si vous (<b title="aviez cherché">chercher</b>)
-                            <input type="text" pattern="aviez cherché">
+                            <input class="wide" type="text" pattern="aviez cherché">
                             ces dossiers, vous les auriez trouvés.
                         </li>
                         <li>
                             Si je (<b title="n'avais pas eu">ne pas avoir</b>)
-                            <input type="text" pattern="n'avais pas eu">
+                            <input class="wide" type="text" pattern="n'avais pas eu">
                             mal au dos, je ne serais pas allé chez la massothérapeute.
                         </li>
                         <li>
@@ -385,7 +388,7 @@
                         </li>
                         <li>
                             S’il avait fait plus chaud, nous (<b title="nous serions baignés">se baigner</b>)
-                            <input type="text" pattern="nous serions baignés">
+                            <input class="extra-wide" type="text" pattern="nous serions baignés">
                             dans le lac.
                         </li>
                     </ol>
