fine-tuned concordance conditional

--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -281,7 +281,7 @@
                                 avons eu mal à l’estomac
                                 parce que nous avons mangé trop de chocolat.</span>
                             <input type="text"
-                                pattern="Si nous n’avions pas mangé trop de chocolat, nous n’aurions pas eu mal à l’estomac[.]?">
+                                pattern="Si nous n'avions pas mangé trop de chocolat, nous n'aurions pas eu mal à l'estomac[.]?">
                         </li>
                         <li>
                             <span title="S’il n’avait pas plu, elle serait allée en randonnée."> Elle n’est pas
@@ -300,7 +300,7 @@
                                 as détesté ce restaurant parce
                                 que la nourriture était très épicée.</span>
                             <input type="text"
-                                pattern="Si la nourriture n’avait pas été très épicée, tu n’aurais pas détesté ce restaurant[.]?">
+                                pattern="Si la nourriture n'avait pas été très épicée, tu n'aurais pas détesté ce restaurant[.]?">
                         </li>
                         <li>
                             <span title="S’il n’avait pas été méchant avec nous, nous l’aurions invité."> Nous ne
